alteracoes na pagina inicial do site

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body style=" position: relative;">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="nav1">
-            <a class="navbar-brand " style="color: white;">Leonardo Seiji Nozaki</a>
+            <a class="navbar-brand " style="color: white;">Solution</a>
 
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav ml-auto">
@@ -27,7 +27,7 @@
                         <a class="text-active" href="#Inicio" id="link-inicio">Início</a>
                     </li>
                     <li class="nav-item" id="li-sobre">
-                        <a class="nav-l" href="#Sobre" id="link-sobre">Sobre mim</a>
+                        <a class="nav-l" href="#Sobre" id="link-sobre">Funções</a>
                     </li>
 
                 </ul>
@@ -38,43 +38,24 @@
     </header>
 
     <div id="Inicio">
-        <div>
-            <h1 class="center-white" style="padding-top: 80px;">Leonardo Seiji Nozaki</h1>
-            <h2 class="center-white">Site pessoal</h2>
+        <div style="padding-top: 13%;">
+            <h1 class="center-black" style="padding-top: 80px;">Solution</h1>
+            <h2 class="center-black">Site para consulta de algoritmos para diversos problemas envolvendo programação.</h2>
         </div>
     </div>
     <br>
-    <div id="Sobre">
+    <div class="d-flex align-items-center flex-column">
+        <div class="p-2">
+            <h1 class="center">Sobre o site</h1>
+        </div>
+        <div class="p-2" style="width: 50%; text-align: center;">
+            <p>Solution é um site do GitHub Pages que tem como objetivo principal exibir as soluções desenvolvidas para diversos problemas do <a href="https://www.urionlinejudge.com.br/judge/pt/login">URI Online Judge Academic</a> , além disso, é possível
+                encontrar e consultas as funções criadas nas soluções dos problemas de forma organizada no site. Em geral, essas funções podem ser reutilizadas em outros problemas ou compor a solução de problemas mais complexos</p>
 
-        <h1 class="center" style="padding-top: 55px;">Sobre mim</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tortor odio, vestibulum ac metus vel, scelerisque gravida quam. Sed dictum interdum lectus eget iaculis. Cras sed mollis augue. Ut scelerisque augue vitae scelerisque gravida. Sed
-            eget varius turpis, in pellentesque lectus. Pellentesque vulputate augue nec neque volutpat, non tincidunt dolor porttitor. Integer consectetur tortor sit amet lectus ultrices, vitae iaculis lorem dapibus. Nam quis libero eros. Vestibulum
-            est felis, vulputate vitae rhoncus vitae, fringilla sit amet mi. Etiam porttitor, lacus sit amet tincidunt commodo, sapien augue ullamcorper ligula, vel volutpat nisl odio non metus. Aliquam id faucibus purus. Sed consequat dapibus mattis.
-            Aliquam non ornare dui. Praesent pharetra pulvinar egestas. Duis eu posuere sem, vel euismod augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris sit amet quam vitae orci pharetra facilisis.
-            Donec euismod id turpis at ullamcorper. Fusce efficitur, lectus id viverra molestie, ipsum nibh hendrerit dolor, in congue libero purus eu diam. Cras tempus ipsum ut congue ornare. Morbi dictum, dolor et ornare venenatis, enim arcu venenatis
-            mi, non lacinia nisl dui nec nisl. Nulla quis ligula non leo sagittis lacinia. Cras dictum quam a ipsum gravida tincidunt. Sed hendrerit ut augue mattis elementum. Aenean nec venenatis lorem. Etiam laoreet odio turpis, a luctus lectus ullamcorper
-            a. Maecenas pharetra non erat nec hendrerit. Sed sit amet vulputate augue. Sed condimentum tortor non bibendum posuere. Integer mi nisl, molestie quis ullamcorper a, tempor non orci. Fusce tincidunt, ligula ut elementum convallis, sem urna
-            congue dui, vitae pellentesque odio dui nec nisi. Etiam fringilla maximus massa et lacinia. Mauris dignissim tellus odio, sed porta ipsum finibus sed. Curabitur blandit ante sit amet imperdiet maximus. Sed luctus feugiat vehicula. Mauris eget
-            tristique ante. Aliquam lobortis nec odio non aliquet. Ut nec cursus nunc. Sed sed est purus. Sed ut ornare mi. Aenean blandit enim quis aliquet hendrerit. Phasellus mollis tempus tellus, ut bibendum tortor convallis id. Donec vel ante mi.
-            Nullam eget tincidunt diam. Donec dictum massa nibh, a blandit neque commodo quis. Maecenas hendrerit dictum felis eget commodo. Fusce scelerisque sit amet arcu vel ullamcorper. In a sem ornare, faucibus ex nec, dictum sem. Etiam enim ex,
-            porta id dignissim at, rutrum sed ligula.</p>
+        </div>
     </div>
     <br>
-    <div>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tortor odio, vestibulum ac metus vel, scelerisque gravida quam. Sed dictum interdum lectus eget iaculis. Cras sed mollis augue. Ut scelerisque augue vitae scelerisque gravida. Sed
-            eget varius turpis, in pellentesque lectus. Pellentesque vulputate augue nec neque volutpat, non tincidunt dolor porttitor. Integer consectetur tortor sit amet lectus ultrices, vitae iaculis lorem dapibus. Nam quis libero eros. Vestibulum
-            est felis, vulputate vitae rhoncus vitae, fringilla sit amet mi. Etiam porttitor, lacus sit amet tincidunt commodo, sapien augue ullamcorper ligula, vel volutpat nisl odio non metus. Aliquam id faucibus purus. Sed consequat dapibus mattis.
-            Aliquam non ornare dui. Praesent pharetra pulvinar egestas. Duis eu posuere sem, vel euismod augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris sit amet quam vitae orci pharetra facilisis.
-            Donec euismod id turpis at ullamcorper. Fusce efficitur, lectus id viverra molestie, ipsum nibh hendrerit dolor, in congue libero purus eu diam. Cras tempus ipsum ut congue ornare. Morbi dictum, dolor et ornare venenatis, enim arcu venenatis
-            mi, non lacinia nisl dui nec nisl. Nulla quis ligula non leo sagittis lacinia. Cras dictum quam a ipsum gravida tincidunt. Sed hendrerit ut augue mattis elementum. Aenean nec venenatis lorem. Etiam laoreet odio turpis, a luctus lectus ullamcorper
-            a. Maecenas pharetra non erat nec hendrerit. Sed sit amet vulputate augue. Sed condimentum tortor non bibendum posuere. Integer mi nisl, molestie quis ullamcorper a, tempor non orci. Fusce tincidunt, ligula ut elementum convallis, sem urna
-            congue dui, vitae pellentesque odio dui nec nisi. Etiam fringilla maximus massa et lacinia. Mauris dignissim tellus odio, sed porta ipsum finibus sed. Curabitur blandit ante sit amet imperdiet maximus. Sed luctus feugiat vehicula. Mauris eget
-            tristique ante. Aliquam lobortis nec odio non aliquet. Ut nec cursus nunc. Sed sed est purus. Sed ut ornare mi. Aenean blandit enim quis aliquet hendrerit. Phasellus mollis tempus tellus, ut bibendum tortor convallis id. Donec vel ante mi.
-            Nullam eget tincidunt diam. Donec dictum massa nibh, a blandit neque commodo quis. Maecenas hendrerit dictum felis eget commodo. Fusce scelerisque sit amet arcu vel ullamcorper. In a sem ornare, faucibus ex nec, dictum sem. Etiam enim ex,
-            porta id dignissim at, rutrum sed ligula.</p>
-
-    </div>
 
 </body>
 
